<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/action_challenges"
        android:title="@string/challenges"
        android:icon="@drawable/ic_challenges" />
    <item
        android:id="@+id/action_ranking"
        android:title="@string/ranking"
        android:icon="@drawable/ic_ranking" />

    <item
        android:id="@+id/action_history"
        android:title="@string/history"
        android:icon="@drawable/ic_history" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile" />
</menu>
